navidrome/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: navidrome
  name: navidrome
  namespace: navidrome
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-pvc-data-longhorn
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: navidrome-pvc-music-longhorn
      containers:
        - env:
            - name: ND_REVERSEPROXYUSERHEADER
              value: 'X-Forwarded-User'
            - name: ND_REVERSEPROXYWHITELIST
              value: '0.0.0.0/0'
            - name: PGID
              value: "1000" # < ASCII code for '65541'
            - name: PUID
              value: "1000" #< ACII code for '1044'
            - name: TZ
              value: Europe/Vienna # Container must run as privileged inside of the pod, required for hardware acceleration
          image: deluan/navidrome:0.54.5
          imagePullPolicy: Always
          name: navidrome
          ports:
            - containerPort: 4533
              name: web
              protocol: TCP
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /data
              name: navidrome-data
            - mountPath: /music
              name: navidrome-music
      dnsPolicy: ClusterFirst
      restartPolicy: Always
